--- a/wids.ipynb
+++ b/wids.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
    "source": [
     "import zipfile\n",
     "\n",
-    "zip_path = r\"C:\\Users\\wanji\\Desktop\\WIDS Challenge\\WIDS-Datathon\\widsdatathon2025.zip\"\n",
+    "zip_path = r\"C:\\Users\\wanji\\Desktop\\WIDS Challenge\\widsdatathon2025.zip\"\n",
     "\n",
     "# List files inside the ZIP\n",
     "with zipfile.ZipFile(zip_path, 'r') as z:\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[5 rows x 19901 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,9 +286,9 @@
     "\n",
     "with zipfile.ZipFile(zip_path, 'r') as z:\n",
     "    with z.open(file_to_read) as f:\n",
-    "        data = pd.read_csv(f)\n",
+    "        train_data = pd.read_csv(f)\n",
     "\n",
-    "data.head()  # Display first few rows\n",
+    "train_data.head()  # Display first few rows\n",
     "\n"
    ]
   },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "[5 rows x 19901 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,9 +530,58 @@
     "\n",
     "with zipfile.ZipFile(zip_path, 'r') as z:\n",
     "    with z.open(file_to_read) as f:\n",
-    "        data = pd.read_csv(f)\n",
+    "        test_data = pd.read_csv(f)\n",
     "\n",
-    "data.head()        "
+    "test_data.head()        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1213 entries, 0 to 1212\n",
+      "Columns: 19901 entries, participant_id to 198throw_199thcolumn\n",
+      "dtypes: float64(19900), object(1)\n",
+      "memory usage: 184.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 304 entries, 0 to 303\n",
+      "Columns: 19901 entries, participant_id to 198throw_199thcolumn\n",
+      "dtypes: float64(19900), object(1)\n",
+      "memory usage: 46.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data.info()"
    ]
   },
   {
