--- a/wids.ipynb
+++ b/wids.ipynb
@@ -9,13 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np \n",
-    "import zipfile  \n"
+    "import zipfile  \n",
+    "import seaborn as sns \n",
+    "import matplotlib.pyplot as plt \n",
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler  \n"
    ]
   },
   {
@@ -34,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +281,7 @@
        "[5 rows x 19901 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +525,7 @@
        "[5 rows x 19901 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +879,7 @@
        "[8 rows x 19900 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1220,7 @@
        "[8 rows x 19900 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,10 +1231,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "1208    False\n",
+       "1209    False\n",
+       "1210    False\n",
+       "1211    False\n",
+       "1212    False\n",
+       "Length: 1213, dtype: bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for duplicates in both training and testing data \n",
+    "train_data.duplicated()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "299    False\n",
+       "300    False\n",
+       "301    False\n",
+       "302    False\n",
+       "303    False\n",
+       "Length: 304, dtype: bool"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_data = train_data.select_dtypes(include=['float64, int64'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "participant_id          0\n",
+       "0throw_1thcolumn        0\n",
+       "0throw_2thcolumn        0\n",
+       "0throw_3thcolumn        0\n",
+       "0throw_4thcolumn        0\n",
+       "                       ..\n",
+       "196throw_198thcolumn    0\n",
+       "196throw_199thcolumn    0\n",
+       "197throw_198thcolumn    0\n",
+       "197throw_199thcolumn    0\n",
+       "198throw_199thcolumn    0\n",
+       "Length: 19901, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non-numeric columns: Index(['participant_id'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the data types of each column\n",
+    "non_numeric_columns = train_data.select_dtypes(exclude=[np.number]).columns\n",
+    "print(\"Non-numeric columns:\", non_numeric_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data.select_dtypes(include=[np.number]).corr()\n",
+    "# Normalizing the numeric features \n",
+    "corr_matrix =train_data.drop(columns=['paticipant_id'])\n",
+    "plt.figure(figsize = (12,6))\n",
+    "sns.heatmap(corr_matrix, annot = True, cmap = 'coolwarm', fmt = '2f', vmin = -1, vmax= 1)\n",
+    "plt.title(\"Training Correlation\")"
+   ]
   },
   {
    "cell_type": "code",
